settings page - redirections and buttons

--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -115,5 +115,24 @@
             <button>Save</button>
         </div>
     </div>
+    <div class="s-about_you">
+        <div class="ay-header">
+            <div class="ay-tabs">
+                <a data-href="/settings/library">Library</a>
+                <a data-href="/settings/mystuff">My Stuff</a>
+                <a data-href="/settings/history">History</a>
+            </div>
+            <div class="ay-subtabs l-subtabs">
+                <a data-subtab="favorites" class="active">Favorites</a>
+                <a data-subtab="liked">Liked</a>
+            </div>
+            <div class="ay-subtabs ms-subtabs">
+                <a data-subtab="myposts" class="active">My posts</a>
+                <a data-subtab="mycomments">My comments</a>
+            </div>
+        </div>
+        <div class="ay-body">
 
+        </div>
+    </div>
 </div>
