--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -250,7 +250,7 @@
             <ul>
                 @if (userId != "-1")
                 {
-                    <li><a href="/settings/profile">
+                    <li><a href="/u/@username">
                             <div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile
                         </a></li>
                     <li><a href="/settings/library">
@@ -333,7 +333,7 @@
                             @if (userId != "-1")
                             {
                                 <li><a class="ad-username">@username</a></li>
-                                <li><a href="/settings/profile">Profile</a></li>
+                                <li><a href="/u/@username">Profile</a></li>
                                 <li><a href="/settings/library">Library</a></li>
                                 <li><a href="/settings/friends">Friends</a></li>
                             }
