--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -292,6 +292,7 @@ main {
     a {
         padding-top: 4px;
         margin-bottom: -4px;
+        float: left;
 
         &:hover {
             text-decoration: underline;
