--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -753,7 +753,7 @@ header .header-wrap {
   position: absolute;
   bottom: 30px;
   right: 0;
-  background: #303030;
+  background: var(--background-color1);
   border-radius: 8px;
   box-shadow: 0 0 19px -5px rgba(0, 0, 0, 0.5);
   display: flex;
