--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -98,7 +98,7 @@
                                 </span>
                             </div>
                             <div class="pi-detail-column">
-                                <i class="bi bi-chat"></i>
+                                <i class="bi bi-chat-right"></i>
                                 <span class="pi-amount_of_comments">
 
                                 </span>
