--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -149,6 +149,7 @@
                     margin-top: 10px;
 
                     span {
+                        color: #fff;
                         background-color: rgb(106, 38, 55);
                         border-radius: 4px;
                     }
@@ -271,5 +272,13 @@
                 cursor: pointer;
             }
         }
+    }
+}
+
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .post {
+        border-radius: 10px;
     }
 }
