--- a/OmneFictio.Web/wwwroot/css/settings.css
+++ b/OmneFictio.Web/wwwroot/css/settings.css
@@ -68,7 +68,7 @@ nav .settings-link_cont .desktop_nav li a {
   cursor: pointer;
   padding: 7px 40px 7px 20px;
   font-size: 1.5rem;
-  transition: all 0.2s ease 0s;
+  transition: all 0.1s ease;
   border-bottom: 1px solid var(--background-color-hover1);
 }
 nav .settings-link_cont .desktop_nav li a:hover {
@@ -201,7 +201,7 @@ nav .settings-link_cont .desktop_nav li a.active {
 }
 
 .settings_body .s-profile_settings {
-  display: none;
+  display: flex;
   flex-direction: column;
   width: 100%;
   padding: 12px;
@@ -284,48 +284,57 @@ nav .settings-link_cont .desktop_nav li a.active {
   background-color: var(--save-botton-hover);
 }
 
-.settings_body .s-about_you {
-  display: flex;
+.settings_body .s-library {
+  display: none;
   flex-direction: column;
   width: 100%;
-  padding: 12px;
+  padding: 12px 0 20px;
 }
-.settings_body .s-about_you .ay-header {
+.settings_body .s-library .lib-header {
   display: flex;
-  flex-direction: column;
   color: var(--text-color1);
+  /*.lib-subtabs {
+      display: none;
+      justify-content: space-evenly;
+      padding: 6px 10% 14px;
+
+      a {
+          font-size: 1rem;
+          font-family: 'Itim', cursive;
+          cursor: pointer;
+          padding: 4px 10px;
+      }
+
+      a.active {
+          border-bottom: 1px solid var(--text-color1);
+      }
+  }*/
 }
-.settings_body .s-about_you .ay-header .ay-tabs {
+.settings_body .s-library .lib-header .lib-tabs {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  border-bottom: 1px solid var(--background-color2);
+  padding-bottom: 8px;
 }
-.settings_body .s-about_you .ay-header .ay-tabs a {
-  font-size: 1.4rem;
+.settings_body .s-library .lib-header .lib-tabs a {
+  font-size: 1.1rem;
   font-family: "Josefin Sans", sans-serif;
   cursor: pointer;
   border-radius: 25px;
-  padding: 7px 20px 4px;
+  padding: 8px 5% 3px;
+  transition: all 0.1s ease;
 }
-.settings_body .s-about_you .ay-header .ay-tabs a.active {
+.settings_body .s-library .lib-header .lib-tabs a.active {
   background: var(--settings-activetab);
   color: #fff;
 }
-.settings_body .s-about_you .ay-header .ay-subtabs {
-  display: none;
-  justify-content: space-evenly;
-  padding: 20px 10% 10px;
-}
-.settings_body .s-about_you .ay-header .ay-subtabs a {
-  font-size: 1.2rem;
-  font-family: "Itim", cursive;
-  cursor: pointer;
-  padding: 4px 10px;
-}
-.settings_body .s-about_you .ay-header .ay-subtabs a.active {
-  border-bottom: 1px solid var(--text-color1);
-}
-.settings_body .s-about_you .ay-body {
+.settings_body .s-library .lib-body {
   display: flex;
+  flex-direction: column;
+}
+.settings_body .s-library .lib-body > div {
+  width: 49.5%;
 }
 
 @media (min-width: 576px) {
@@ -337,6 +346,14 @@ nav .settings-link_cont .desktop_nav li a.active {
   }
   .s-profile_settings .ps-row .ps-cell {
     width: 50%;
+  }
+  .s-library {
+    /*.lib-subtabs a {
+        font-size: 1.2rem !important;
+    }*/
+  }
+  .s-library .lib-tabs a {
+    font-size: 1.3rem !important;
   }
 }
 @media (min-width: 768px) {
@@ -353,13 +370,20 @@ nav .settings-link_cont .desktop_nav li a.active {
   nav .settings-link_cont .desktop_nav {
     display: block;
   }
-  .settings_body .s-about_you {
+  .settings_body .s-library {
     padding-top: 18px;
+  }
+  .settings_body .s-library .lib-body {
+    padding: 0 12px;
   }
 }
 @media (min-width: 992px) {
   .settings_body .s-friends .sf-list .sf-usercont {
     width: unset;
+  }
+  .s-library .lib-body.lib-masonry {
+    flex-direction: row !important;
+    gap: 1%;
   }
 }
 @media (max-width: 279px) {
