--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -466,12 +466,12 @@ header {
             border-radius: 4px;
 
             ::placeholder {
-                color: var(--searchplaceholder-color);
+                color: #939393;
                 opacity: 1;
             }
 
             ::-ms-input-placeholder {
-                color: var(--searchplaceholder-color);
+                color: #939393;
             }
         }
     }
